2nd commit. Finished employment history

--- a/resume_ms.html
+++ b/resume_ms.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Michael Spurlin" />
-    <meta name="date" content="2022-04-30" />
+    <meta name="date" content="2022-05-01" />
     <title>Michael Spurlin’s Resume</title>
 
     
@@ -38,14 +38,14 @@
 <h2>Skills</h2>
 <ul>
 <li><p>Helping organizations grow and retain revenue.</p></li>
-<li><p>Enhancing CRM and Sales applicataion.</p></li>
+<li><p>Enhancing CRM and Sales applications.</p></li>
 <li><p>Building applications in R and Power BI to help teams save time</p></li>
 </ul>
 </div>
 <div id="disclaimer" class="section level2">
 <h2>Disclaimer</h2>
 <p>This resume was made with the R package <a href="https://github.com/rstudio/pagedown"><strong>pagedown</strong></a>.</p>
-<p>Last updated on 2022-04-30.</p>
+<p>Last updated on 2022-05-01.</p>
 </div>
 </div>
 <div id="main" class="section level1">
@@ -134,7 +134,7 @@
 </li>
 <li>Built a quote, pricing, and proposal tool to support sales with a new partner.<br />
 </li>
-<li>Built a tool in R to better understand a cClient’s potential pain.<br />
+<li>Built a tool in R to better understand a client’s potential pain.<br />
 </li>
 <li>Used Power BI to better understand the Sales activity and opportunity for growth.<br />
 </li>
@@ -188,7 +188,7 @@
 <h3>LexisNexis, Client Manager</h3>
 <p>Helped General Counsel and their IP, L&amp;E, &amp; Tax staff to protect the organization and deliver better business outcomes.</p>
 <p>Text 45</p>
-<p>January June 2009 - January 2014</p>
+<p>June 2009 - January 2014</p>
 <div class="concise">
 <ul>
 <li>Led the account team that works with customers to retain and grow a $3.2M territory In Michigan, Indiana, and Ohio.<br />
@@ -197,6 +197,70 @@
 <li>Beat revenue growth and retention targets for all four years.<br />
 </li>
 <li>Leveraged traditional and non-traditional (social media and data analytics) tools and processes to increase revenue growth and revenue retention in my territory.</li>
+</ul>
+</div>
+</div>
+<div id="lexisnexis-manager-consulting" class="section level3">
+<h3>LexisNexis, Manager, Consulting</h3>
+<p>Led a team of 12 consultants to provide education and consulting across the United States. Responsible for hiring, coaching development, and budget.</p>
+<p>Text 45</p>
+<p>November 2005 - June 2009</p>
+<div class="concise">
+<ul>
+<li>Led team to increase activity by 32% year one. Doubled productivity by year three.<br />
+</li>
+<li>Redesigned the team to support $1.3M in custom consulting projects from non-traditional revenue streams.</li>
+</ul>
+</div>
+</div>
+<div id="lexisnexis-applications-consultant" class="section level3">
+<h3>LexisNexis, Applications Consultant</h3>
+<p>Text 45</p>
+<p>February 2002 - November 2005</p>
+<div class="concise">
+<ul>
+<li>Retained and grew revenue for a $3M territory through implementation and ongoing support of LexisNexis solutions.</li>
+<li>Helped F500 customers increase business efficiencies and improve processes.</li>
+<li>Negotiated contracts, cold called customers, and created service plans.</li>
+</ul>
+</div>
+</div>
+<div id="tmanage-manager-marketing-strategy" class="section level3">
+<h3>TManage, Manager, Marketing Strategy</h3>
+<p>Text 45</p>
+<p>November 2000 - November 2001</p>
+<div class="concise">
+<ul>
+<li>Brought a product from whiteboard to market in 90 days.<br />
+</li>
+<li>Managed a Competitive Intelligence and Research program to increase Sales effectiveness.<br />
+</li>
+<li>Responded to RFPs.</li>
+</ul>
+</div>
+</div>
+<div id="dti-mck-communications-marketing-manager" class="section level3">
+<h3>DTI-MCK Communications, Marketing Manager</h3>
+<p>Text 45</p>
+<p>November 1999 - November 2000</p>
+<div class="concise">
+<ul>
+<li>Created Competitive Intelligence program to enable Sales team to be knowledgeable on Sales calls.</li>
+<li>Managed Marketing programs and results to increase effectiveness.</li>
+<li>Managed the transition of two Marketing departments after a merger.</li>
+</ul>
+</div>
+</div>
+<div id="nortel-networks-various-positions" class="section level3">
+<h3>Nortel Networks, Various Positions</h3>
+<p>Various positions with increasing responsibilities.</p>
+<p>Text 45</p>
+<p>November June 1989 - November 1999</p>
+<div class="concise">
+<ul>
+<li>Created and implemented a knowledge sharing system for use by 400 people in three countries.</li>
+<li>Performed competitive intelligence to define corporate IT strategy.</li>
+<li>Developed leader-lead, learner-led, and CBT education solutions.</li>
 </ul>
 </div>
 </div>
