Polished format Added education

--- a/resume_ms.html
+++ b/resume_ms.html
@@ -57,46 +57,14 @@
 <p>Using my love for data, relentless curiosity, and my desire to help people solve problems, I want to help an organization retain recurring revenue, increase sales, and maximize its footprint.</p>
 </div>
 </div>
-<div id="research-experience" class="section level2" data-icon="laptop">
-<h2>Research Experience</h2>
-<div id="graduate-research-assistant" class="section level3">
-<h3>Graduate Research Assistant</h3>
-<p>Beijing Institute of Genomics, Chinese Academy of Sciences</p>
-<p>Beijing, China</p>
-<p>2011 - 2014</p>
-<ul>
-<li>Performed computational biology research towards understanding regulation of alternative splicing in human and mouse transcriptome.</li>
-<li>Found EGFR pathway related mutations, aimed to understand the impacts of cancer mutations on EGFR signaling pathway.</li>
-</ul>
-</div>
-<div id="bioinformatican" class="section level3">
-<h3>Bioinformatican</h3>
-<p>My Health Gene Technology Co., Ltd.</p>
-<p>Beijing, China</p>
-<p>2015 - 2016</p>
-<ul>
-<li>Investigated how cancer cells spread to other parts of the body at the single cell level.</li>
-</ul>
-</div>
-<div id="visiting-scientist" class="section level3">
-<h3>Visiting Scientist</h3>
-<p>University of Alabama at Birmingham</p>
-<p>AL, USA</p>
-<p>2016 - 2018</p>
-<ul>
-<li>Investigated the role of mitochondria in development of cancer.</li>
-<li>Investigated the evolution of genome architecture and its role in important evolutionary events.</li>
-<li>Detected thrombotic thrombocytopenic purpura related mutations in mutiple patients’ blood genome.</li>
-</ul>
-</div>
-</div>
-<div id="professional-experience" class="section level2" data-icon="suitcase">
-<h2>Professional Experience</h2>
+<div id="experience" class="section level2" data-icon="suitcase">
+<h2>Experience</h2>
 <div id="certa-director" class="section level3">
 <h3>Certa, Director</h3>
 <p>Responsible for improving sales operations and building prototypes of solutions.</p>
-<p>Text 45</p>
-<p>December 2021 - Present</p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>Present - December 2021</p>
 <p><strong>Sales operations</strong></p>
 <div class="concise">
 <ul>
@@ -120,10 +88,11 @@
 </div>
 <div id="f.h.-black-company-solutions-advisor" class="section level3">
 <h3>F.H. Black &amp; Company, Solutions Advisor</h3>
-<p>Responsible for improving sales operations and building prototypes of solutions.</p>
-<p>Text 45</p>
-<p>September 2020 - November 2021</p>
-<p>Responsible for formalizing the sales role in the United States and driving growth in the Eastern half of the United States. Working with states, counties, cities and school districts to automate their financial reporting process.</p>
+<p>Responsible for formalizing the sales role in the United States and driving growth in the Eastern half of the United States. Working with states, counties, cities and school districts to automate their financial reporting process.<br />
+<br></p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>November 2021 - September 2020</p>
 <div class="concise">
 <ul>
 <li>In 2021, led the team in the amount of deals closed.<br />
@@ -144,8 +113,9 @@
 <div id="dun-bradstreet-account-executive" class="section level3">
 <h3>Dun &amp; Bradstreet, Account Executive</h3>
 <p>Responsible for improving sales operations and building prototypes of solutions.</p>
-<p>Text 45</p>
-<p>August 2018 - September 2020</p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>September 2020 - August 2018</p>
 <p>Grew and retained my territory by helping Procurement, Compliance, and Data teams simplify and streamline the process of identifying and mitigating third-party risk as well as manage solutions driven by data (data lakes and master data).</p>
 <div class="concise">
 <ul>
@@ -162,18 +132,22 @@
 </div>
 <div id="workiva-regional-sales-director" class="section level3">
 <h3>Workiva, Regional Sales Director</h3>
-<p>Helped CFOs, Controllers and VP’s of Finance at Higher Ed institutions, States, and Municipalities leverage a SaaS solution to shorten, simplify and streamline their financial reporting process, allowing their teams more time for analytics work and additional projects.</p>
-<p>Text 45</p>
-<p>November 2015 - August 2018</p>
+<p>Helped CFOs, Controllers and VP’s of Finance at Higher Ed institutions, States, and Municipalities leverage a SaaS solution to shorten, simplify and streamline their financial reporting process, allowing their teams more time for analytics work and additional projects.<br />
+<br></p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>August 2018 - November 2015</p>
 <ul>
 <li>Acquired the first customers for this market in Illinois, Indiana, Kentucky, Ohio, and Virginia.</li>
 </ul>
 </div>
 <div id="gartner-account-executive" class="section level3">
 <h3>Gartner, Account Executive</h3>
-<p>Worked with CIOs and their directs to help IT transform the business by providing analysts and resources to support their security, supply chain, BI, and other strategic IT initiatives.</p>
-<p>Text 45</p>
-<p>January 2014 - November 2015</p>
+<p>Worked with CIOs and their directs to help IT transform the business by providing analysts and resources to support their security, supply chain, BI, and other strategic IT initiatives.<br />
+<br></p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>November 2015 - January 2014</p>
 <div class="concise">
 <ul>
 <li>Added $440K to $855K territory.<br />
@@ -186,9 +160,11 @@
 </div>
 <div id="lexisnexis-client-manager" class="section level3">
 <h3>LexisNexis, Client Manager</h3>
-<p>Helped General Counsel and their IP, L&amp;E, &amp; Tax staff to protect the organization and deliver better business outcomes.</p>
-<p>Text 45</p>
-<p>June 2009 - January 2014</p>
+<p>Helped General Counsel and their IP, L&amp;E, &amp; Tax staff to protect the organization and deliver better business outcomes.<br />
+<br></p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>January 2014 - June 2009</p>
 <div class="concise">
 <ul>
 <li>Led the account team that works with customers to retain and grow a $3.2M territory In Michigan, Indiana, and Ohio.<br />
@@ -202,9 +178,11 @@
 </div>
 <div id="lexisnexis-manager-consulting" class="section level3">
 <h3>LexisNexis, Manager, Consulting</h3>
-<p>Led a team of 12 consultants to provide education and consulting across the United States. Responsible for hiring, coaching development, and budget.</p>
-<p>Text 45</p>
-<p>November 2005 - June 2009</p>
+<p>Led a team of 12 consultants to provide education and consulting across the United States. Responsible for hiring, coaching development, and budget.<br />
+<br></p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>June 2009 - November 2005</p>
 <div class="concise">
 <ul>
 <li>Led team to increase activity by 32% year one. Doubled productivity by year three.<br />
@@ -215,8 +193,11 @@
 </div>
 <div id="lexisnexis-applications-consultant" class="section level3">
 <h3>LexisNexis, Applications Consultant</h3>
-<p>Text 45</p>
-<p>February 2002 - November 2005</p>
+<!-- N/A for not having a Description -->
+<p>N/A</p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>November 2005 - February 2002</p>
 <div class="concise">
 <ul>
 <li>Retained and grew revenue for a $3M territory through implementation and ongoing support of LexisNexis solutions.</li>
@@ -227,8 +208,11 @@
 </div>
 <div id="tmanage-manager-marketing-strategy" class="section level3">
 <h3>TManage, Manager, Marketing Strategy</h3>
-<p>Text 45</p>
-<p>November 2000 - November 2001</p>
+<!-- N/A for not having a Description -->
+<p>N/A</p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>November 2001 - November 2000</p>
 <div class="concise">
 <ul>
 <li>Brought a product from whiteboard to market in 90 days.<br />
@@ -241,8 +225,11 @@
 </div>
 <div id="dti-mck-communications-marketing-manager" class="section level3">
 <h3>DTI-MCK Communications, Marketing Manager</h3>
-<p>Text 45</p>
-<p>November 1999 - November 2000</p>
+<!-- N/A for not having a Description -->
+<p>N/A</p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>November 2000 - November 1999</p>
 <div class="concise">
 <ul>
 <li>Created Competitive Intelligence program to enable Sales team to be knowledgeable on Sales calls.</li>
@@ -253,13 +240,15 @@
 </div>
 <div id="nortel-networks-various-positions" class="section level3">
 <h3>Nortel Networks, Various Positions</h3>
-<p>Various positions with increasing responsibilities.</p>
-<p>Text 45</p>
-<p>November June 1989 - November 1999</p>
+<p>Various positions with increasing responsibilities.<br />
+<br></p>
+<!-- N/A for not using location -->
+<p>N/A</p>
+<p>November 1999 -November June 1989</p>
 <div class="concise">
 <ul>
 <li>Created and implemented a knowledge sharing system for use by 400 people in three countries.</li>
-<li>Performed competitive intelligence to define corporate IT strategy.</li>
+<li>Performed competitive intelligence to define corporate IT strategy. <br></li>
 <li>Developed leader-lead, learner-led, and CBT education solutions.</li>
 </ul>
 </div>
@@ -282,23 +271,13 @@
 </div>
 <div id="education" class="section level2" data-icon="graduation-cap" data-concise="true">
 <h2>Education</h2>
-<div id="beijing-university-of-chemical-technology" class="section level3">
-<h3>Beijing University of Chemical Technology</h3>
-<p>B.S. in Information and Computing Sciences</p>
-<p>Beijing, China</p>
-<p>2010</p>
-<p>Thesis: Dyadic wavelet and its application in edge detection</p>
-</div>
-<div id="university-of-chinese-academy-of-sciences" class="section level3">
-<h3>University of Chinese Academy of Sciences</h3>
-<p>M.S. in Bioinformatics</p>
-<p>Beijing, China</p>
-<p>2014</p>
-<p>Thesis: A multi-omics study for intra-individual divergence of the distributions between mRNA isoforms in mammals</p>
+<div id="university-of-north-texas" class="section level3">
+<h3>University of North Texas</h3>
+<p>B.A. English</p>
 </div>
 </div>
-<div id="selected-publications-and-posters" class="section level2" data-icon="file">
-<h2>Selected Publications and Posters</h2>
+<div id="selected-projects" class="section level2" data-icon="file">
+<h2>Selected Projects</h2>
 <div id="genetic-and-epigenetic-signals-are-found-predictive-to-the-distribution-of-intra-individual-divergence-of-alternative-splicing." class="section level3">
 <h3>Genetic and epigenetic signals are found predictive to the distribution of intra-individual divergence of alternative splicing.</h3>
 <p>Poster for 2013 International Conference of Genomics</p>
